feat: 유저-이벤트 북마크/참가 기능
